# kima

./: .gitignore  .gitmodules  CMakeLists.txt
examples/sim-1560290/: sim-1560290.lc
src/: Data.cpp  Data.h  RVmodel.cpp  elliptic.h  kepler.h  kima.h  limbdark.h  main.cpp  parameter.h  planet.cpp  planet.h  system.cpp  system.h
tools/: OPTIONS
